# hw29

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  pytest.ini  terminal.txt  utils.py
ads/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ad_image.py  0002_compilation.py  0002_initial.py
ads/urls/: ad.py  cat.py  compilation.py
data/: ad.csv  ad.json  category.json  location.json  user.json
datasets/: ads.csv  ads.json  categories.json
hw27/: asgi.py  settings.py  urls.py  wsgi.py
hw29/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_list_test.py  ad_retrieve_test.py
tests/compilations/: compilation_create_test.py
users/: admin.py  models.py  serializers.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_date.py  0002_alter_user_options.py  0003_alter_user_managers_user_date_joined_user_email_and_more.py  0004_alter_user_age.py
users/urls/: location.py  user.py
